[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/game/level/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/level/level_types/BombPlantingLevel.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/world/entity/entities/item/collectible_items/objective/BombCollectible.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 4 )

[node name="BombPlantingLevel" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="EscapePoint" type="Area2D" parent="GameWorld/Geometry" index="1"]
position = Vector2( 20, 71.5 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameWorld/Geometry/EscapePoint" index="0"]
shape = SubResource( 1 )

[node name="PlantPoint" type="Area2D" parent="GameWorld/Geometry" index="2"]
position = Vector2( 108.114, 69.5549 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameWorld/Geometry/PlantPoint" index="0"]
shape = SubResource( 2 )

[node name="BombCollectible" parent="GameWorld/EntityPool" index="0" instance=ExtResource( 3 )]
position = Vector2( 51.157, 77.0272 )
collision_layer = 0

[node name="BombTimer" type="Timer" parent="." index="1"]
wait_time = 60.0
one_shot = true

[connection signal="body_entered" from="GameWorld/Geometry/PlantPoint" to="." method="_on_PlantPoint_body_entered"]
[connection signal="body_exited" from="GameWorld/Geometry/PlantPoint" to="." method="_on_PlantPoint_body_exited"]

[editable path="GameWorld"]
